# perturbation-screen

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  config.yaml  pyproject.toml  pytest.ini  requirements.txt
perturbation_screen/: analysis.ipynb  main.py  playground.ipynb  summary_table.csv
perturbation_screen/implementations/: dummy_perturbation_screen.py  dynamo_perturbation_screen.py
perturbation_screen/interfaces/: perturbation_screen.py
perturbation_screen/utils/: config.py  data_promise.py  experiment_scheduler.py  logger.py
tests/: test_config.py  test_main.py
